--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,6 @@
 html, body {
     background-image: url("https://cdn.pixabay.com/photo/2015/09/09/20/33/basketball-933173__340.jpg");
 }
+.pure-g{
+    width: 90%;
+}
